fixed hero alignment

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -18,13 +18,8 @@ header {
 }
 
 .wrapper {
-  width: 60%;
+  width: 70%;
 }
-
-/* #abuget {
-  font-family: "Abuget";
-  font-size: 50px;
-} */
 
 .hero h1 {
   width: 100%;
